# ase-2021-fall

./: CMakeLists.txt  icons.qrc  images.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  pagecontext.cpp  pagecontext.h  pagewidget.cpp  pagewidget.h
browser/: browserwidget.cpp  browserwidget.h  browserwidget.ui
datatypes/: attachment.cpp  attachment.h  note.cpp  note.h
editor/: attachmentlist.cpp  attachmentlist.h  attachmentlist.ui  attachmentwidget.cpp  attachmentwidget.h  attachmentwidget.ui  editorwidget.cpp  editorwidget.h  editorwidget.ui
landing/: landingwidget.cpp  landingwidget.h  landingwidget.ui
navigate/: navcontext.cpp  navcontext.h  pagecontext.cpp  pagecontext.h  pagewidget.cpp  pagewidget.h
storage/: filesystembackend.cpp  filesystembackend.h  notemanager.cpp  notemanager.h  storagebackend.cpp  storagebackend.h
